--- a/css/main.css
+++ b/css/main.css
@@ -13,14 +13,16 @@ header {
   color: white;
   padding: 2rem 1rem;
   text-align: center;
+  z-index: 0;
+  position: relative;
 }
 
 /* header::before {
   content: "";
-  position: relative;
+  position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(0, 0, 0, 0.5); 
-  z-index: 0;
+  background: rgba(0, 0, 0, 0.4); 
+  z-index: 1;
 }
 
 header > * {
